<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aatb_controllers</name>
  <version>0.0.1</version>
  <description>Custom ROS2 controllers for AATB's art practice, including motion-constrained position control using Ruckig</description>
  <maintainer email="aatb@example.com">AATB</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>ruckig</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>